* 0.16 all

  - protocol version 3 changes the wire format to introduce additional
    extensibility. Unfortunatly version 3 isn't backwards compatibile
    with version 2. I decided to do this now, as it may be the last
    chance.

  - Introducing netidx channels. Bidirectional message channels that
    function like tcp sockets, except the address is a netidx path,
    and all the security features of netidx are applied.

  - Major refactor of publisher and subscriber to completely eliminate
    blocking awaits from their respective message handling loops.

* 0.15.1 core netidx

  - expose the inner u64 in atomic_id for ffi bindings
  - make DesiredAuth Serializable/Deserializable for ffi bindings

* 0.15.1 browser

  - fix a crash when creating progress bars. sorry ...

* 0.15 all

  - skipping ahead to 0.15 because tls is a big step forward.
  - add a new authentication mechanism TLS, for using transport layer
    security for authentication and encryption.
    - using rustls
    - full mutual authentication is REQUIRED. Later I may add PublicTls
      for server -> client only authentication. We'll see.
    - The protocol changes are backwards compatible, but obviously old
      publishers, resolvers, and subscribers will not understand tls.
    - At the moment it's all or nothing at the resolver level. You can't
      do kerberos AND tls on the same resolver. There's no reason this
      couldn't be done, however I don't need it right now, and I wanted
      to release the MVP.
    - The book is updated for tls in all the relevant places
  - RPCs are reworked on the server side and a bit on the client side.
    The new api is a significant improvement IMHO, but it will break all
    rpc servers *sorry*. However the protocol did not change significantly,
    so existing rpc clients can call new rpc servers, and new rpc clients can
    call old rpc servers.
    
    The only thing that did change about the rpc protocol is that there is now